--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ one blinded oneself that one might walk with more safety in a land of pit and pr
 					   return (i*ls_h) + 1*ls_h;})
 				   .text(function(d, i){
 					   return legend_labels[i]; });
-			 d3.json('Data/localidades_bogota.geojson', draw);
+			 d3.json('localidades_bogota.geojson', draw);
 			</script>
 	</body>
 </html>
