Add README.md file

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 					</p>
 					<p class="desc">
 						The data was taken from the 
-						<a href="http://oasportal.policia.gov.co/imagenes_ponal/dijin/observatorio/cicri'"> police departemnt </href>
-							webpage, for the years 2010 to 2015.
+						<a href='http://oasportal.policia.gov.co/imagenes_ponal/dijin/observatorio/cicri/cifras0.html'> police departemnt </a>
+						webpage, for the years 2010 to 2015.
 					</p>
 				</div>
 			</div>
