Add bar graph to show the hours and places when most of murders in the sample appear

--- a/index2.html
+++ b/index2.html
@@ -19,6 +19,7 @@
 				<div class="row" >
 					<div id="svgHere"class="col-8">
 						<script src="functions.js"></script>
+						<script>startAnimation(1000)</script>
 					</div>
 				</div>
 				<div class="col-4">
